--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Restaurant Lucci</title>
+  <title>Restaurant </title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
